--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
+<!-- 项目启动首页解析 index.html -->
   <head>
     <meta charset="utf-8">
+    <!-- 设置视图 -->
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- vue 项目设置 icon，方法一：用老方法 <link>  方法二：在 build 下 webpack.dev.conf.js 中配置：
+    favicon: path.resolve('favicon.ico') -->
     <title>"自愈"后台管理系统</title>
   </head>
   <body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
   </body>
 </html>
